--- a/zettelkasten/permanent/202601221030.md
+++ b/zettelkasten/permanent/202601221030.md
@@ -5,7 +5,7 @@
 - **Source:** [[Brian Tracy - Habla menos actua mas]]
 
 ## Idea
-I don't know why our mind always tends to feel seduced by bad habits. Bad habits have that spark that attracts us and makes us do things we know aren't the right path, but still, the reward of falling into a bad habit is so high that most human beings prefer to take that path rather than choose a good habit, even knowing deep down that in the medium-long term the good habit will bring us greater rewards and, ultimately, a more lasting happiness over time.
+No sé por qué nuestra mente siempre tiende a ir por como que se siente seducida por los malos hábitos. Los malos hábitos tienen como esa chispa que nos atrae y que nos hace hacer cosas que sabemos que no es el camino correcto, pero aún así, la recompensa (llamativa) de caer en un hábito malo es una recompensa tan alta que la mayoría de los seres humanos preferimos irnos por ese camino antes que escoger un buen hábito, aún sabiendo en el fondo que a mediano largo plazo el hábito bueno nos va a traer mayores recompensas y, a la larga, una felicidad más perdurable en el tiempo.
 
 ## Connections
 - Foundational note - no connections yet
