refactor: update zettelkasten distillation steps and polish note elaboration

--- a/zettelkasten/permanent/202601221030.md
+++ b/zettelkasten/permanent/202601221030.md
@@ -1,11 +1,11 @@
-# The Seductive Trap of Bad Habits
+# La Seductiva Trampa de los Malos Hábitos
 - **ID:** 202601221030
 - **Date:** 2026-01-22
 - **Tags:** #habits #delayed-gratification #decision-making #human-behavior
 - **Source:** [[Brian Tracy - Habla menos actua mas]]
 
 ## Idea
-No sé por qué nuestra mente siempre tiende a ir por como que se siente seducida por los malos hábitos. Los malos hábitos tienen como esa chispa que nos atrae y que nos hace hacer cosas que sabemos que no es el camino correcto, pero aún así, la recompensa (llamativa) de caer en un hábito malo es una recompensa tan alta que la mayoría de los seres humanos preferimos irnos por ese camino antes que escoger un buen hábito, aún sabiendo en el fondo que a mediano largo plazo el hábito bueno nos va a traer mayores recompensas y, a la larga, una felicidad más perdurable en el tiempo.
+Nuestra mente siempre se siente seducida por los malos hábitos. Tienen esa chispa que nos atrae y nos hace hacer cosas que sabemos que no son el camino correcto. Aún así, la recompensa llamativa de caer en un mal hábito es tan alta que la mayoría de los seres humanos preferimos ir por ese camino antes que escoger un buen hábito, aún sabiendo en el fondo que a mediano y largo plazo el hábito bueno nos traerá mayores recompensas y una felicidad más perdurable en el tiempo.
 
 ## Connections
 - Foundational note - no connections yet
