docs: update inbox.md to remove outdated note and add new permanent notes on personal success and carpe diem, enhancing connections and references in the Zettelkasten system

--- a/zettelkasten/permanent/202601221030.md
+++ b/zettelkasten/permanent/202601221030.md
@@ -1,16 +1,20 @@
 # La Seductiva Trampa de los Malos Hábitos
+
 - **ID:** 202601221030
 - **Date:** 2026-01-22
 - **Tags:** #habits #delayed-gratification #decision-making #human-behavior
 - **Source:** [[Brian Tracy - Habla menos actua mas]]
 
 ## Idea
+
 Nuestra mente siempre se siente seducida por los malos hábitos. Tienen esa chispa que nos atrae y nos hace hacer cosas que sabemos que no son el camino correcto. Aún así, la recompensa llamativa de caer en un mal hábito es tan alta que la mayoría de los seres humanos preferimos ir por ese camino antes que escoger un buen hábito, aún sabiendo en el fondo que a mediano y largo plazo el hábito bueno nos traerá mayores recompensas y una felicidad más perdurable en el tiempo.
 
 ## Connections
+
 - Foundational note - no connections yet
 
 ---
-## Original Context (from Inbox)
-> "La verdad es que los malos hábitos son fáciles de adoptar, pero difíciles de vivir. Los buenos hábitos son difíciles de asumir, pero fáciles de vivir."
-> — Brian Tracy, "Habla menos, actúa más"
+
+## Original Context
+
+La verdad es que los malos hábitos son fáciles de adoptar, pero difíciles de vivir. Los buenos hábitos son difíciles de asumir, pero fáciles de vivir.
