--- a/zettelkasten/permanent/202601241530.md
+++ b/zettelkasten/permanent/202601241530.md
@@ -1,15 +1,20 @@
 # El Poder del Consentimiento Emocional
+
 - **ID:** 202601241530
 - **Date:** 2026-01-24
 - **Tags:** #mindset #emotional-intelligence #self-improvement #decision-making
 - **Source:** [[Brian Tracy - Habla menos actua mas]]
 
 ## Idea
+
 Cuando culpas a otra persona por algo que hizo o no hizo, le permites controlar tus emociones. Al señalar o responsabilizar a otros por lo que te sucede, indirectamente les das libertad para influir en tus pensamientos, en tus acciones y, por ende, drenar lo más valioso que tienes: tu energía y tiempo.
 
 ## Connections
+
 - Complementa [[202601221045]] — así como el rendimiento es una decisión, permitir que otros controlen tus emociones también es una decisión (consciente o inconsciente).
 
 ---
-## Original Context (from Inbox)
-> "Nadie puede hacerte sentir inferior sin tu consentimiento." — Eleanor Roosevelt
+
+## Original Context
+
+Nadie puede hacerte sentir inferior sin tu consentimiento.
